# spyderman

./: README.md  pyproject.toml
src/spyderman/: _cli.py
src/spyderman.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
