[project]
name = "spyderman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "uv>=0.8.11",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyside6>=6.9.1",
    "pytest>=8.4.1",
    "spyder-kernels>=3.0.5",
]

[project.scripts]
spyderman = "spyderman._cli:spyderman"
